<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/guideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font3"
            android:gravity="end|bottom"
            android:text="@string/_0"
            android:textColor="#DBDBDB"
            android:textSize="60sp" />
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_clear"
        style="@style/card_style"
        android:backgroundTint="@color/my_color1"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btnPositiveOrNegative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ac"
            android:textColor="@color/black"
            android:textSize="33sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPositiveOrNegative"
        style="@style/card_style"
        android:backgroundTint="@color/my_color1"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintStart_toEndOf="@id/btn_clear"
        app:layout_constraintTop_toBottomOf="@id/guideLine">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_positive_or_negative" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_percent"
        style="@style/card_style"
        android:backgroundTint="@color/my_color1"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_slash"
        app:layout_constraintStart_toEndOf="@id/btnPositiveOrNegative"
        app:layout_constraintTop_toBottomOf="@id/guideLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_7"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_clear">

        <TextView
            style="@style/tv_style"
            android:text="@string/_7" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_8"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btnPositiveOrNegative">

        <TextView
            style="@style/tv_style"
            android:text="@string/_8" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_9"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_slash"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_percent">

        <TextView
            style="@style/tv_style"
            android:text="@string/_9" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_slash"
        style="@style/card_style"
        android:backgroundTint="@color/my_color2"
        app:layout_constraintBottom_toTopOf="@id/btn_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintTop_toBottomOf="@id/guideLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slash"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_4"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_7">

        <TextView
            style="@style/tv_style"
            android:text="@string/_4" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_5"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_8">

        <TextView
            style="@style/tv_style"
            android:text="@string/_5" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_6"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        app:layout_constraintEnd_toStartOf="@id/btn_x"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_9">

        <TextView
            style="@style/tv_style"
            android:text="@string/_6" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_x"
        style="@style/card_style"
        android:backgroundTint="@color/my_color2"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_slash">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kop"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_1"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4">

        <TextView
            style="@style/tv_style"
            android:text="@string/_1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_2"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_5">

        <TextView
            style="@style/tv_style"
            android:text="@string/_2" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_3"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_6">

        <TextView
            style="@style/tv_style"
            android:text="@string/_3" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_minus"
        style="@style/card_style"
        android:backgroundTint="@color/my_color2"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_x">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_dot"
        style="@style/card_style"
        android:backgroundTint="@color/my_color3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_answer"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/_55sdp"
        android:backgroundTint="@color/my_color3"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/my_font3"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_answer"
        style="@style/card_style"
        android:backgroundTint="@color/my_color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_plus">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_plus"
        style="@style/card_style"
        android:backgroundTint="@color/my_color2"
        app:layout_constraintBottom_toTopOf="@id/btn_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_minus">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="45sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>